MongoDB-demo/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:   
  name: mongo-ingress  
spec:   
  rules:  
    - host: my-mongo-project.info
      http:  
        paths:  
          - path: /  
            pathType: Prefix 
            backend: 
              service: 
                name: mongo-express-service 
                port: 
                  number: 8080
